# flika

./: .gitignore  .gitignore 2  AUTHORS.rst  CHANGELOG.rst  DBScan.py  FLIKA.py  Flika.bat  GlobalAnalysis.py  How to compile Flika on python.txt  LICENSE  LICENSE.txt  MANIFEST.in  MotilityTracking.py  PropertiesWidget.py  README.md  README.rst  Shapely-1.5.13-cp34-none-win_amd64.whl  Voltage.py  __init__.py  __main__ 2.py  __main__.py  dependency_check.py  flika.bat  flika.desktop  flika.py  flika.sh  global_vars.py  histogram.py  hook-numpy.py  plugin_manager.py  pyproject.toml  replace_version.py  roi.py  run.bat  script_namespace.py  scripts.py  setup.py  tifffile.py  time_flika_startup 2.py  time_flika_startup.py  (+5 more)
.github/workflows/: publish-to-pypi.yml  run-tests.yml
analyze/: __init__.py  measure.py
analyze/behavior/: tifffile.py
analyze/puffs/: average_origin.py  gaussianFitting.py  gaussianFittingReproducibility.py  puffAnalyzer.py  puffLocalization.py  threshold_cluster template.py  threshold_cluster.py
docs/: Makefile  conf.py  file.rst  image.rst  index.rst  intro.rst  make.bat  process.rst
docs/tutorials/: How Flika reads plugins.ipynb  How to make a plugin for Flika.ipynb  Untitled.ipynb
examples/: README.md  generate_random_video.py  subtract_trace_from_video.py
examples/utils/: __init__.py  ipython_helper.py
flika/: Changes.txt  __init__.py  flika.py  global_vars 2.py  global_vars.py  logger 2.py  logger.py  main.py  roi 2.py  roi.py  test.pos  test.txt  tracefig.py  update_flika 2.py  update_flika.py  version 2.py  version.py  window 2.py  window.py
flika/app/: main.ui  (+18 more)
gui/: DBScan.ui  DBScanToolbox.ui  FileToolbox.ui  FilterToolbox.ui  Flika_old.ui  GlobalAnalysis.ui  ImageToolbox.ui  MotilityTracking.ui  ROIToolbox.ui  TraceToolbox.ui  exitButtons.ui  ipythonWidget.ui  main.ui  plugin_manager.ui  save.ui  scriptEditor.ui
images/: images.qrc
plugins/: plugin_data.py  plugin_manager.py  xmltodict.py
process/: BaseProcess.py  binary.py  dbscan_.py  file_.py  filters.py  math_.py  measure.py  motility_.py  overlay.py  progress_bar.py  roi.py  stacks.py  voltage_.py
script_editor/: ScriptEditor.py  script_namespace.py  syntax.py  terminal.py  terminal_widget.py
tests/: __init__.py  puff_detect_test.py
(+204 files in other folders)
